# ProxyForge

./: .gitignore  LICENSE  ProxyForge.spec  README.md  pyproject.toml
proxyforge/: CreateShortcut.py  NginxManager.py
