[project]
name = "proxyforge"
version = "0.1.0"
description = "A simple proxy manager for Windows"
authors = [
    {name = "Nil Mallick",email = "mallick.nilotpal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyqt6 (>=6.8.1,<7.0.0)",
    "pyinstaller (>=6.12.0,<7.0.0)",
    "winshell (>=0.6,<0.7)",
    "pywin32 (>=310,<311)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
